# Spam-Detection

./: .gitignore  .spam-api.docker.env  Dockerfile.app  README.md  docker-compose.yml  pyproject.toml
app/: main.py
baseline/: MMT Fraud Detection.ipynb  requirements.txt
features/: README.md
features/tf-idf-lsa/: labels.npy
features/vector-embeddings/: labels.npy
model_performance/: model_comparison_tf-idf-lsa.csv  model_comparison_tf-idf.csv  model_comparison_vector-embeddings.csv
models/: cnn_lstm_tf-idf-lsa.keras  cnn_lstm_vector-embeddings.keras  cnn_tf-idf-lsa.keras  cnn_vector-embeddings.keras  gru_tf-idf-lsa.keras  gru_vector-embeddings.keras  logistic_regression_tf-idf-lsa.joblib  logistic_regression_tf-idf.joblib  logistic_regression_vector-embeddings.joblib  lstm_tf-idf-lsa.keras  lstm_vector-embeddings.keras  naive_bayes_tf-idf-lsa.joblib  naive_bayes_tf-idf.joblib  naive_bayes_vector-embeddings.joblib  svm_tf-idf-lsa.joblib  svm_tf-idf.joblib  xgboost_tf-idf-lsa.joblib  xgboost_tf-idf.joblib  xgboost_vector-embeddings.joblib
notebooks/: .env  01-exploratory-data-analysis.ipynb  02-models-training-and-evaluation.ipynb
tests/: test_api.sh
